--- a/src/Index.html
+++ b/src/Index.html
@@ -6,8 +6,8 @@
     <title>Secondstokochi</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/08b6d24fc0.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/Style.css">
-    <link rel="stylesheet" href="../css/mobile-style.css">
+    <link rel="stylesheet" href="../src/Style.css">
+    <link rel="stylesheet" href="../src/mobile-style.css">
 </head>
 <body>
    <header>
@@ -30,7 +30,7 @@
                                         </li>
                                         <li class="nav-item">
                                           <a class="navbar-brand" href="#">
-                                            <img src="../assets/azaz-01.png" width="30" height="30" alt="image">
+                                            <img src="../src/azaz-01.png" width="30" height="30" alt="image">
                                           </a>
                                         </nav>
                                         </li>
@@ -45,15 +45,15 @@
                         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                           <div class="carousel-inner">
                             <div class="carousel-item active">
-                              <img class="d-block w-100" src="../assets/SPACE_album-mock.jpg"  alt="First slide">
+                              <img class="d-block w-100" src="../src/SPACE_album-mock.jpg"  alt="First slide">
                               <h5>Stary nights</h5>
                             </div>
                             <div class="carousel-item">
-                              <img class="d-block w-100" src="../assets/sunset-retro-80's-cd-cover-art-template-design-2cc033e89001c5f3b65e3542cdb084de_screen.jpg" alt="Second slide">
+                              <img class="d-block w-100" src="../src/sunset-retro-80's-cd-cover-art-template-design-2cc033e89001c5f3b65e3542cdb084de_screen.jpg" alt="Second slide">
                               <h5>Time of life</h5>
                             </div>
                             <div class="carousel-item">
-                              <img class="d-block w-100" src="../assets/teddy-bear-retro-80's-cd-cover-art-template-design-cadf16403b5f8f682b3249ed71ef8d7e_screen.jpg" alt="Third slide">
+                              <img class="d-block w-100" src="../src/teddy-bear-retro-80's-cd-cover-art-template-design-cadf16403b5f8f682b3249ed71ef8d7e_screen.jpg" alt="Third slide">
                               <h5>Hopefull lies</h5>
                             </div>
                           </div>
@@ -113,7 +113,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="pray">
-              <img src="../assets/mixtape-album-cover-art-design-template-68450756e786f85861314fa7d49d8366.jpg" alt="pray"> 
+              <img src="../src/mixtape-album-cover-art-design-template-68450756e786f85861314fa7d49d8366.jpg" alt="pray"> 
             </div>
           </div>
          <div class="col-md-6">
